# nacre

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  askama.toml  eslint.config.js  mise.toml  package.json
.beads/: issues.jsonl  last-touched  sync-state.json
.github/workflows/: release.yml
benches/: markdown_comparison.rs  template_comparison.rs  tree_building.rs
docs/: hello.md  precise.md  user-flows.md
docs/prds/: prd-foundation-2024-12-15.md  prd-foundation-v1-2025-12-15.md  prd-foundation-v2-2025-12-29.md  prd-nacre-v1-2025-12-15.md  prd-nacre-v2-2025-12-29.md  prd-nacre-v3-2025-12-29.md
docs/prompts/: create-prd.md  generate-tasks.md  project_management.md  starting.md
docs/prompts/context/: project-management.md
docs/prompts/do/: execute-task.md  generate-tasks.md
docs/workflow/: execute-epic.md
frontend/public/: app.js  autumnus.dark.css  autumnus.light.css  index.html  main.js  style.css  test.js
frontend/public/themes/: catppuccin-frappe.css  catppuccin-latte.css  catppuccin-macchiato.css  catppuccin-mocha.css  nacre-dark.css  nacre-light.css
frontend/src/: constants.ts  main.ts
frontend/src/modules/: board.ts  dependency-graph.ts  dragdrop.ts  edit.ts  graph.ts  list.ts  navigation.ts  search.ts  sorting.ts  theme.ts  toast.ts
frontend/templates/: _footer.html  _head.html  _header.html  board.html  dashboard.html  graph.html  metrics.html  prd.html  prds.html  task.html  tasks.html
src/: app.rs  beads.rs  error.rs  handlers.rs  lib.rs  main.rs  markdown.rs  templates.rs
src/handlers/: board.rs  epics.rs  general.rs  graph.rs  issues.rs  landing.rs  metrics.rs  prds.rs  tasks.rs
templates/: _header.html  _nav.html  board.html  dashboard.html  edit_issue.html  epic_detail.html  epics.html  graph.html  index.html  issue.html  landing.html  metrics.html  new_issue.html  palette.html  prd.html  prds.html  task.html  task_detail.html  task_edit.html  tasks.html
tests/: integration_tests.rs  security_tests.rs
tests/common/: mod.rs
tests/integration/: api_tests.rs  board_tests.rs  cross_feature_tests.rs  general_tests.rs  metrics_tests.rs  mod.rs  prd_tests.rs  static_assets_tests.rs  task_views_tests.rs
