[package]
name = "nacre"
version = "0.7.0"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["askama_axum"]  # Provides IntoResponse trait impls for Askama+Axum

[[bench]]
harness = false
name = "markdown_comparison"

[[bench]]
harness = false
name = "template_comparison"

[[bench]]
harness = false
name = "tree_building"

[dependencies]
argh = { version = "0.1" }
autumnus = { version = "0.7", default-features = false, features = [
    "lang-bash",
    "lang-css",
    "lang-html",
    "lang-javascript",
    "lang-json",
    "lang-python",
    "lang-rust",
    "lang-toml",
    "lang-typescript",
    "lang-yaml",
] }
askama = { version = "0.12", features = ["markdown"] }
askama_axum = { version = "0.4" }
axum = { version = "0.7" }
include_dir = { version = "0.7" }
kiters = { version = "0.1.0" }
open = { version = "5.0" }
pulldown-cmark = { version = "0.13" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sqids = { version = "0.4.2" }
thiserror = { version = "2" }
time = { version = "0.3.44", features = ["serde", "formatting", "parsing", "macros"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["compression-full", "trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }

[dev-dependencies]
axum-test = "15"
criterion = { version = "0.5" }
http-body-util = "0.1"
markdown = { version = "1.0" }
minijinja = { version = "2.0" }
serial_test = "3"
tempfile = "3"
